[package]
name = "deathfr"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"

serenity = "0.12.4"
shuttle-runtime = "0.49.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.49.0"
tracing = "0.1.37"
tokio = "1.26.0"
log = "0.4.22"
