[package]
name = "deathfr"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"

serenity = "0.12.4"
shuttle-runtime = "0.51.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.51.0"
tracing = "0.1.37"
tokio = "1.26.0"
log = "0.4.22"
mongodb = "3.1.0"
once_cell = "1.20.1"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = "0.12.9"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.128"
rand = "0.9.0"