[package]
name = "deathfr"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"

serenity = "0.12.4"
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.22"
mongodb = { version = "3.1.0" }
once_cell = "1.20.1"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = "0.12.9"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.128"
rand = "0.9.0"
bson = {version = "2.14.0", features = ["chrono-0_4"]}
env_logger = "0.11.8"
async-trait = "0.1.83"
toml = "0.8.20"
